fix: adjust section3-part3 on small screen

--- a/sass/main.css
+++ b/sass/main.css
@@ -718,10 +718,8 @@ body {
 }
 @media screen and (max-width: 900px) {
   .main-section3-part3 {
-    align-items: baseline;
-    max-width: 511px;
-    position: relative;
-    right: 100px;
+    width: 311px;
+    overflow-x: hidden;
   }
 }
 
@@ -735,16 +733,22 @@ body {
     text-align: left;
   }
 }
+@media screen and (max-width: 900px) {
+  .part3-header-text {
+    margin-left: 10px;
+  }
+}
 
 @media screen and (max-width: 1074px) {
   .part3-card-container {
     display: flex;
     align-items: center;
+    width: 864px;
   }
 }
 @media screen and (max-width: 900px) {
   .part3-card-container {
-    margin-left: 200px;
+    margin-left: 10px;
   }
 }
 
@@ -753,7 +757,6 @@ body {
   align-items: center;
   width: 224px;
 }
-
 .part3-img-group {
   display: flex;
   align-items: center;
@@ -774,6 +777,10 @@ body {
   right: 60px;
   background-color: #fcfcfd;
   border-radius: 64px;
+}
+
+.part3-card-name-number-group {
+  width: 152px;
 }
 
 .part3-card-name {
